--- a/render.yaml
+++ b/render.yaml
@@ -21,9 +21,10 @@ services:
         value: enabled
       - key: DATABASE_URL # Render PostgreSQL database
         fromDatabase:
-          name: postgresql-acute-68754
+          name: Gamer Spot database
           property: connectionString
 
 databases: # Render PostgreSQL database
-  - name: postgresql-acute-68754
+  - name: Gamer Spot database
+    databaseName: gamer_spot_database
     ipAllowList: [] # only allow internal connections
