--- a/render.yaml
+++ b/render.yaml
@@ -21,10 +21,9 @@ services:
         value: enabled
       - key: DATABASE_URL # Render PostgreSQL database
         fromDatabase:
-          name: Gamer Spot database
+          name: postgresql-acute-68754
           property: connectionString
 
 databases: # Render PostgreSQL database
-  - name: Gamer Spot database
-    databaseName: gamer_spot_database
+  - name: postgresql-acute-68754
     ipAllowList: [] # only allow internal connections
